--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -124,5 +125,8 @@
       }
     }
   },
-  "defaultProject": "northwind"
+  "defaultProject": "northwind",
+  "cli": {
+    "analytics": "79fd2cd6-0cee-48ec-a95e-412fed591ad1"
+  }
 }
